<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile">

    <!-- Background View -->

    <!-- Logo ImageView -->
    <View
        android:id="@+id/top_veiw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_veiw" />

    <!-- Profile Info -->

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="152dp"
        android:layout_height="161dp"
        android:layout_marginLeft="265dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/profile" />

    <LinearLayout
        android:layout_width="397dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_marginTop="7dp"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <!-- Name TextView -->
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_name"
            android:textColor="@color/purple_dark" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="Movindu Liyanage"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <!-- Email TextView -->

        <!-- Bio TextView -->
        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_email"
            android:textColor="@color/purple_dark" />

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="movin@gmail.com"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_bio"
            android:textColor="@color/purple_dark" />

        <TextView
            android:id="@+id/textViewBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet lectus lectus."
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/SavedAlarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Saved_Alarms"
            android:textColor="@color/purple_dark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Saved_Alarm1"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Saved_Alarm2"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Saved_Alarm3"
                android:textColor="@color/black"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Saved_Alarm4"
                android:textColor="@color/black"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <Button
                android:id="@+id/createAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginRight="12dp"
                android:backgroundTint="@color/purple_dark"
                android:text="@string/btn_create"
                android:onClick="createAlarm"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/createAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/purple_dark"
                android:text="@string/btn_delete"
                android:onClick="showProfileDeletedToast"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/Profile"
        android:layout_width="153dp"
        android:layout_height="107dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/profile"
        android:textColor="@color/purple_dark"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Edit Profile Button -->

</RelativeLayout>
