<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:id="@+id/top_veiw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_veiw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/Wlcm_Head"
            android:textColor="@color/purple_dark"
            android:textColorHint="@color/purple_dark"
            android:textSize="48sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"

            android:gravity="center" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="To"
            android:textColor="@color/purple_dark"
            android:textColorHint="@color/purple_dark"
            android:textSize="48sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="286dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@mipmap/logo" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/stup_acc2"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/stup_acc"
            android:textColor="@color/purple_dark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/SignUpBtn"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_dark"
                android:text="@string/SignUpText"
                android:onClick="signUpbtn"
                android:textSize="20sp" />

            <Button
                android:id="@+id/SignInBtn"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_dark"
                android:text="@string/SignInText"
                android:onClick="signInbtn"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
